# swift-collections

./: CMakeLists.txt
Sources/BitCollections/: CMakeLists.txt
Sources/Collections/: CMakeLists.txt
Sources/DequeModule/: CMakeLists.txt
Sources/HashTreeCollections/: CMakeLists.txt
Sources/HeapModule/: CMakeLists.txt
Sources/InternalCollectionsUtilities/: CMakeLists.txt
Sources/OrderedCollections/: CMakeLists.txt
Sources/RopeModule/: CMakeLists.txt
cmake/modules/: SwiftSupport.cmake
